<resources>
    <!-- Grundlegendes -->
    <string name="app_name">Oro</string>
    <string-array name="tabs_array">
        <item>Dashboard</item>
        <item>Transactions</item>
        <item>Accounts</item>
        <item>Budgets</item>
    </string-array>
    <string-array name="currency_array">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="amount_default_symbol">€</string>

    <!-- Login Screen -->
    <string name="LoginText">Hi there and welcome to Oro!\n\nYou need an account to store your data. If you don\'t have one yet, just create one right here!</string>
    <string name="LoginEMail">E-Mail</string>
    <string name="LoginPW">Password</string>
    <string name="LoginRegister">Register</string>
    <string name="LoginLogin">Login</string>
    <string name="logoutText">Logout</string>
    <string name="loggingInText">Logging you in…</string>

    <!-- empty list placeholders -->
    <string name="transactions_empty">It seems like you don\'t have any transactions logged yet. Adding one is easy: Just click the plus button at the bottom of this page!\n\nYou can also head over to the accounts tab and drag the money icons from one account to another in order to transfer money between them.\nTry it out, it\'s fun!</string>
    <string name="budgets_empty">You don\'t have any budgets yet. Just tap on the plus icon at the bottom of this page to create one!</string>
    <string name="dashboard_empty">Whoops! There are no Dashboard cards to show you.</string>

    <!-- Account Add / Edit Screen -->
    <string name="account_edit_title_add">Add a new Account</string>
    <string name="account_edit_title_edit">Edit Account</string>
    <string name="account_edit_name">Name:</string>
    <string name="account_edit_name_hint">Name of the account</string>
    <string name="account_edit_balance">Balance:</string>
    <string name="account_edit_balance_hint">Balance of the account</string>
    <string name="account_edit_color">Color:</string>
    <string name="account_edit_default">Default account:</string>
    <string name="account_edit_default_new">Please select a new default:</string>
    <string name="account_edit_confirm_add">Add Account</string>
    <string name="account_edit_confirm_edit">Apply Changes</string>

    <!-- Budget Add / Edit Screen -->
    <string name="budget_edit_title_add">Add a new Budget</string>
    <string name="budget_edit_title_edit">Edit Budget</string>
    <string name="budget_edit_done">Done</string>
    <string name="budget_edit_delete">Delete</string>
    <string name="budget_edit_from">Starting</string>
    <string name="budget_edit_until">Until</string>
    <string name="budget_edit_duration">Duration</string>
    <string name="budget_edit_cat">Category</string>
    <string name="budgetExpiredText">EXPIRED</string>


    <!-- Transaction Add / Edit Screen -->
    <string name="transaction_add_title_add">Add a new Transaction</string>
    <string name="transaction_add_title_edit">Edit Transaction</string>
    <string name="transaction_add_type_expense">Expense</string>
    <string name="transaction_add_type_shift">Shift</string>
    <string name="transaction_add_type_income">Income</string>
    <string name="transaction_add_account">Account</string>
    <string name="transaction_add_accountTo">Account (To)</string>
    <string name="transaction_add_accountFrom">Account (From)</string>
    <string name="transaction_add_cat">Category</string>
    <string name="transaction_add_desc">Description</string>
    <string name="transaction_add_done">DONE</string>
    <string name="transaction_add_date">Date</string>

    <!-- Settings Screen -->
    <string name="settings_currency">Currency:</string>
    <string name="settings_currency_note">Please note that changing the currency here does not perform currency conversion but leaves the numeric values as they were.</string>
    <string name="settings_homeTab">Home Tab:</string>
    <string name="settings_deleteCat_header">Delete a category:</string>
    <string name="settings_deleteCat_exp">Expenses:</string>
    <string name="settings_deleteCat_inc">Incomes:</string>
    <string name="settings_loggedInAs">You\'re currently logged in as:</string>

    <!-- Dashboard -->
    <string name="budget_delete_message">Hidden until next restart!</string>

    <!--Welcome Card-->
    <string name="welcomecard_title">Welcome to Oro!</string>
    <string name="welcomecard_title_swiped">I\'m lonely!</string>
    <string name="welcomecard_text">It seems to be pretty empty in here. Do not worry! As you start
    using Oro more and more, this page will fill up in no time! Try adding a transaction for example!</string>

    <string name="welcomecard_text_swiped">You seem to have swiped away all the relevant cards… I can bring everything back, if you want!</string>
    <string name="welcomecard_btn1">DO IT</string>

    <!--Swipe tutorial-->
    <string name="swipetut_title">Delete me!</string>
    <string name="swipetut_text">You do not want me here? That\'s fine! Just swipe me away towards the right side of your screen. Oro will remember your choice.</string>

    <!--Highest Income Card-->
    <string name="highestincome_title">Your Biggest Income</string>
    <string name="highestincome_mainText">You are earning most money from </string>

    <!--Highest Expenses Card-->
    <string name="highestexpenses_title">Most Expensive Category</string>
    <string name="highestexpenses_mainText">Overall, you spent the most money on</string>

    <!--Most economical month Expenses Card-->
    <string name="mem_title">Most economical Month</string>
    <string name="mem_mainText">This year, your most economical Month was </string>
    <string name="mem_amountDesc">spent on average.</string>
    <string name="mem_secondaryText">Keep it up!</string>

    <!--Budget Warning Card-->
    <string name="bw_title">Your</string>
    <string name="bw_title2">Budget:</string>
    <string name="bw_mainText">In the current timeframe of </string>
    <string name="bw_amountDesc">of </string>
    <string name="bw_secondaryText1">If you keep going at that rate, you will overshoot your budget by</string>

    <!--Budget Warning Card-->
    <string name="bf_title">Your</string>
    <string name="bf_title2">Budget:</string>
    <string name="bf_mainText1">You overshot your</string>
    <string name="bf_mainText2">Budget!</string>
    <string name="bf_amountDesc">of </string>
    <string name="bf_secondaryText1">You would have needed</string>
    <string name="bf_secondaryText2">extra days to accommodate for that. You can do it the next Time!</string>

</resources>
