<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountAddActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/account_edit_title_add"
        app:titleTextColor="@color/appBarTitle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:columnCount="2"
                >

                <TextView
                    android:text="@string/account_edit_name"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/editUI_textSize"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/account_edit_name_hint"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:id="@+id/balanceText"
                    android:text="@string/account_edit_balance"
                    android:textSize="@dimen/editUI_textSize"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/balanceEdit"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/account_edit_balance_hint"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:text="@string/account_edit_color"
                    android:textSize="@dimen/editUI_textSize"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    />
                <RadioGroup
                    android:id="@+id/colorRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <RadioButton
                        android:id="@+id/colorRadio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/accountDefault"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/colorRadio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/account1" />
                    <RadioButton
                        android:id="@+id/colorRadio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/account2" />
                    <RadioButton
                        android:id="@+id/colorRadio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/account3" />
                    <RadioButton
                        android:id="@+id/colorRadio5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/account4" />
                    <RadioButton
                        android:id="@+id/colorRadio6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/deleteRed" />
                </RadioGroup>
                <TextView
                    android:text="@string/account_edit_default"
                    android:textSize="@dimen/editUI_textSize"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/defaultCheck"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_edit_default_new"
                            android:id="@+id/newDefaultText"
                            android:visibility="gone"/>
                    </LinearLayout>
                    <Spinner
                        android:id="@+id/newDefaultAccSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:visibility="gone"/>
                </LinearLayout>
            </GridLayout>
            <Button
                android:id="@+id/addAccButton"
                android:layout_width="300dp"
                android:textSize="@dimen/editUI_textSize"
                android:paddingTop="@dimen/editUI_doneButton_padding_v"
                android:paddingBottom="@dimen/editUI_doneButton_padding_v"
                android:paddingStart="@dimen/editUI_doneButton_padding_h"
                android:paddingEnd="@dimen/editUI_doneButton_padding_h"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:text="@string/account_edit_confirm_add"
                android:textColor="@color/appBarTitle"
                android:backgroundTint="@color/colorPrimary"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>