<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/card_margin"
    android:layout_marginVertical="@dimen/card_margin"


    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/welcomecard_title"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:id="@+id/primaryMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="96dp"
            android:layout_marginTop="8dp"
            android:text="@string/welcomecard_text"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:alpha="0.12"
            android:background="#000000"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >
            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:background="@android:color/transparent"
                android:text="@string/welcomecard_btn1"
                android:textColor="@color/colorPrimary"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

    </LinearLayout>




</android.support.v7.widget.CardView>
